bootstrap + hopefully all of the files we will need

--- a/app/index.html
+++ b/app/index.html
@@ -16,46 +16,31 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="styles/css/bootstrap/dist/css/bootstrap.min.css">
-
+   
+      <div class="header">
+     <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+           <div class="navbar-header">
+              <a class="navbar-brand" href="#">Capital Fitness</a>
+           </div>
+           <ul class="nav navbar-nav">
+              <li class="active"><a href="index.html">Home</a></li>
+              <li><a href="views/addData.html">Add Data</a></li>
+              <li><a href="views/viewData.html">View Data</a></li>
+              <li><a href="views/login.html">Logout</a></li>
+           </ul>
+        </div>
+      </nav>
+    </div>
     <!-- endbuild -->
   </head>
   <body ng-app="coolcatzApp">
+
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header" ng-cloak="">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-
-            <a class="navbar-brand" href="#/">CatzFitness</a>
-          </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <!-- //angularfire -->
-              <li><a ng-href="#/chat">chat</a></li>
-              <li>
-              <a ng-hide-auth="" href="#/login">log in</a>
-              <a ng-show-auth="" href="#/account">account</a>
-            </li>
-
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <div class="container">
     <div ng-view=""></div>
@@ -63,7 +48,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team and Firebase</p>
+        <p><span class="glyphicon glyphicon-heart"></span> from the CATZ team</p>
       </div>
     </div>
 
